cholera 0.7.9.9028
==================

- return data frames for 6-tuples in partitionOrthoAddresses().


cholera 0.7.9.9027
==================

- include closed tetrad (complete graph) in partitionOrthoAddresses().


cholera 0.7.9.9026
==================

- add latlong.pumps.vestry.


cholera 0.7.9.9025
==================

- add partitionOrthoAddresses().


cholera 0.7.9.9024
==================

- use pre-computed data in latlongOrthoProj() and latlongOrthoProjPumps().
- recompute latlong versions of ortho.proj, ortho.proj.pump and
  ortho.proj.pump.vestry.


cholera 0.7.9.9023
==================

- add/use latlong versions of fatalities.address, frame, pumps and roads data.


cholera 0.7.9.9022
==================

- fix origin = 369 v. origin = "St James Workhouse" in plot.walking_path().


cholera 0.7.9.9021
==================

- add/set plot.walking_path(stacked = TRUE).
- add latlongWalkingPath() prototype.


cholera 0.7.9.9020
==================

- add latlongNearestPump().


cholera 0.7.9.9019
==================

- enable latlongEmbed(vestry = TRUE).


cholera 0.7.9.9018
==================

- add latlong.road.segments, latlong.ortho.proj and latlong.ortho.proj.pump.
- add latlong.ortho.proj.pump.vestry.


cholera 0.7.9.9017
==================

- add latlongFrame() and related functions.
- update latlongSnowMap().


cholera 0.7.9.9016
==================

- add rectangleFilter().
- replace ortho.rect with rectangle.filter.
- archive orthogonalRectangle() and related functions.


cholera 0.7.9.9015
==================

- archive latitudeLongitude*() functions.


cholera 0.7.9.9014
==================

- use latlongAddress() and latlongRoadSegments() in latlongOrthoProj().
- use latlongRoadSegments() in latlongOrthoProjPumps().
- use latlongRoadSegments() in latlongEmbed().
- use amended latlongEmbed() in latlongNeighborhoodData().


cholera 0.7.9.9013
==================

- use partitionRoads() in latlongRoads().